--- a/CFn/ec2-wordpress/ec2-wordpress-al2-userdata/sample-4.yaml
+++ b/CFn/ec2-wordpress/ec2-wordpress-al2-userdata/sample-4.yaml
@@ -117,6 +117,13 @@ Resources:
     Properties:
       LaunchTemplateName: !Sub '${AWS::StackName}-LaunchTemplate'
       LaunchTemplateData:
+        BlockDeviceMappings:
+          - DeviceName: /dev/xvda
+            Ebs:
+              VolumeSize: 10
+              VolumeType: gp2
+              DeleteOnTermination: true
+              Encrypted: false
         TagSpecifications:
           - ResourceType: instance
             Tags:
@@ -162,7 +169,7 @@ Resources:
               - chmod 400 /root/.my.cnf
               ## wordpress.conf
               - cp /root/cloud-init/httpd/wordpress.conf /etc/httpd/conf.d/
-              - systemctl start httpd
+              - systemctl restart httpd
               ## wp-cli
               - wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar -P /tmp
               - mv /tmp/wp-cli.phar /usr/local/bin/wp
