bug_fix_parameter
パラメータ定義不備の修正

--- a/CFn/ec2-autoscalling-with-cloudwatchagent/ec2-autoscalling-with-cloudwatchagent.yaml
+++ b/CFn/ec2-autoscalling-with-cloudwatchagent/ec2-autoscalling-with-cloudwatchagent.yaml
@@ -153,7 +153,7 @@ Resources:
   CloudWatchAgentParameter:
     Type: AWS::SSM::Parameter
     Properties:
-      Name: !Sub 'AmazonCloudWatch-${AWS::StackName}-${Ec2InstanceTagName}-cloudwatch-agent-config'
+      Name: !Sub 'AmazonCloudWatch-${AWS::StackName}-${Ec2InstanceName}-cloudwatch-agent-config'
       Type: String
       Value: !Sub |
         {
